--- a/package.json
+++ b/package.json
@@ -4,30 +4,29 @@
   "description": "Providing visualization of property data in your local marketplace",
   "main": "index.js",
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "cors": "^2.7.1",
     "d3": "^3.5.16",
+    "eslint": "^2.5.1",
+    "eslint-plugin-react": "^3.16.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "object-assign": "^4.0.1",
-    "passport": "^0.3.2",
-    "passport-google-oauth": "^1.0.0",
-    "watchify": "^3.7.0",
-    "bootstrap": "^3.3.6",
     "font-awesome": "^4.5.0",
-    "geoip-lite": "^1.1.6",
+    "geoip-lite": "^1.1.7",
     "keymirror": "^0.1.1",
     "object-assign": "^4.0.1",
+    "object-assign-deep": "0.0.4",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "querystring": "^0.2.0",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
     "react-fetch-api": "^1.0.1",
     "react-router": "^2.0.1",
     "react-router-bootstrap": "^0.20.1",
-    "geoip-lite": "^1.1.7",
-    "object-assign": "^4.0.1",
-    "object-assign-deep": "0.0.4",
-    "querystring": "^0.2.0",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "watchify": "^3.7.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.1",
