--- a/.eslintignore
+++ b/.eslintignore
@@ -1,2 +1,3 @@
-src/js/utils/cookies.js
-src/js/utils/jquery.js
+frontend/src/js/utils/cookies.js
+frontend/src/js/utils/jquery.js
+frontend/build/js/**/*.js
