--- a/package.json
+++ b/package.json
@@ -51,6 +51,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon -w index.js apiserver/index.js frontend/index.js frontend/Gulpfile.js"
   },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-0"
+    ]
+  },
   "author": "nick fiorini",
   "license": "MIT"
 }
