--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^3.3.6",
     "cors": "^2.7.1",
     "d3": "^3.5.16",
+    "envify": "^3.4.0",
     "eslint": "^2.5.1",
     "eslint-plugin-react": "^3.16.1",
     "express": "^4.13.4",
