--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "eslint-plugin-react": "^3.16.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "flux": "^2.1.1",
     "font-awesome": "^4.5.0",
     "geoip-lite": "^1.1.7",
+    "immutable": "^3.7.6",
     "keymirror": "^0.1.1",
     "object-assign": "^4.0.1",
     "object-assign-deep": "0.0.4",
